deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crud-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: crud-java-app
  template:
    metadata:
      labels:
        app: crud-java-app
    spec:
      containers:
        - name: crud-java
          image: yvzhelnin/crud-appl:v0.9
          imagePullPolicy: Always
          ports:
            - name: web
              containerPort: 80
          livenessProbe:
            httpGet:
              port: 80
              path: /info/status
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 2
          readinessProbe:
            httpGet:
              port: 80
              path: /info/health
            initialDelaySeconds: 10
            periodSeconds: 5
