service.yml
apiVersion: v1
kind: Service
metadata:
  name: crud-appl-service
spec:
  selector:
    app: crud-java-appl
  ports:
    - protocol: TCP
      port: 8000
      targetPort: web
  type: NodePort
