ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: yvzhelnin-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /crud-app($|/)(.*)
            pathType: Prefix
            backend:
              serviceName: crud-appl-service
              servicePort: 8000
